<resources>
    <string name="app_name">Ma réu</string>
    <string name="add_meeting">Add new meeting</string>
    <string name="delete_meeting">Delete meeting</string>

    <string name="room">Room</string>
    <string name="subject">Subject</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="participants">Participants</string>
    <string name="save">Save</string>
    <string name="new_reunion">New meeting</string>

    <string name="incorrect_email_format">Format email non-valide</string>
    <string name="incorrect_date_format">Format de date non-valide (format : DD/MM/YYYY)</string>
    <string name="incorrect_hour_format">Format heure non-valide (format : HH:MM)</string>
    <string name="hour_characters">Heure : caractère(s) non-valide(s)</string>
    <string name="room_availability">La salle est déjà occupée à cet horaire</string>


    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_room">Sort by room</string>


    <string name="date_sorting">Date</string>
    <string name="room_sorting">Room</string>


    <string name="filter_by_date">Filter by date</string>
    <string name="room_filter">Filter by Room</string>

    <string name="remove_filter">Remove filter</string>


    <string-array name="room">
        <item>Android</item>
        <item>Dart</item>
        <item>Itunes</item>
        <item>Java</item>
        <item>Kotlin</item>
        <item>OS</item>
        <item>Python</item>
        <item>Studio</item>
        <item>Swift</item>
        <item>Teams</item>
    </string-array>

</resources>