<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/main_til_room"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/main_filter_by_date_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/main_act_room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/room_filter"
                    android:background="@color/white"
                    android:textSize="16sp"
                    android:layout_marginEnd="64dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="4dp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/main_filter_by_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="4dp"
                android:text="@string/filter_by_date"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/add_meeting"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="@color/buttonColor"
        app:tint="?attr/colorOnPrimary"
        />

    <Button
        android:id="@+id/main_button_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/remove_filter"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>