<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/menu_date"
        android:title="@string/date_sorting"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_room"
        android:title="@string/room_sorting"
        app:showAsAction="ifRoom"
        />
</menu>