...
        android:src="@drawable/room_drawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/meeting_item_tv_meetingRoom"
        android:layout_width="61dp"
        android:layout_height="59dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
...
        app:layout_constraintEnd_toStartOf="@id/meeting_item_iv_delete"
        app:layout_constraintTop_toTopOf="@+id/meeting_item_iv_meetingRoom"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/meeting_item_tv_subject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toBottomOf="@id/meeting_item_tv_time"
...
